[package]
name = "TriLib_Zvuk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.5"
hyper = "1.7.0"
mime = "0.3.17"
mime_guess = "2.0.5"
once_cell = "1.21.3"
reqwest = "0.12.23"
serde = "1.0.228"
serde_json = "1.0.145"
tokio =  { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.20"
